<resources>
    <string name="app_name">Physical terms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="greeting_title">Hello! &#128400;</string>
    <string name="select_language_for_learning">Select language for learning</string>
    <string name="select_your_main_language">Select your main language</string>
    <string name="welcome_to_hse_physical_terms_learning_app">Welcome to HSE Physical Terms learning app</string>
    <string name="definition_list">Definitions list</string>
    <string name="formula_list">Formulas list</string>
    <string name="task_list">Tasks list</string>
    <string name="term_list">Terms list</string>
    <string name="main">Main</string>
    <string name="terms">Terms</string>
    <string name="tasks">Tasks</string>
    <string name="formulas">Formulas</string>
    <string name="definitions">Definitions</string>
    <string name="connection_error">Connection error, try later...</string>
    <string name="app_description">Welcome to physical terms app created by HSE students. Here you can learn languages easily!</string>
    <string name="connect_dev">Connect with us</string>
    <string name="version_name">"Version "</string>
</resources>